# advent-of-cpp-2022

./: CMakeLists.txt
source/: main.cpp
source/days/: all.hpp  day_one.cpp  day_one.hpp  solution.hpp
src/: main.cpp
